@@ -25,4 +25,16 @@ int a2_tgdb_new_tty(void);
 char *a2_tgdb_tty_name(void);
 char *a2_tgdb_err_msg(void);
 
+/* These are called from within annotate-two-src for now 
+ * A better approach will be given in the future.
+ */
+int a2_tgdb_change_prompt(char *prompt);
+
+int tgdb_setup_buffer_command_to_run(
+      struct queue *q,
+      char *com, 
+      enum buffer_command_type com_type,        /* Who is running this command */
+      enum buffer_output_type out_type,         /* Where should the output go */
+      enum buffer_command_to_run com_to_run);   /* What command to run */
+
 #endif /* __A2_TGDB_H__ */
